--- a/movie/movie-common/build.gradle
+++ b/movie/movie-common/build.gradle
@@ -8,6 +8,8 @@ bootJar { enabled = false }
 jar { enabled = true }
 
 dependencies {
-
+    // local cache caffeine 설정
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine'
 }
 
